# semgrep-triage

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: _config.yml  design.md  index.md
examples/: django-report.md
src/sg_triage/: __init__.py  __main__.py  cache.py  cli.py  config.py  llm.py  parser.py  schema.py  triage.py  verifiers.py
src/sg_triage/extractor/: __init__.py  base.py  language_router.py  python_extractor.py
src/sg_triage/prompts/: __init__.py  triage.py
src/sg_triage/reporters/: __init__.py  json_report.py  markdown.py  terminal.py
tests/: test_cache.py  test_extractor.py  test_parser.py  test_verifiers.py
tests/fixtures/extractor/: sample_module.py  security_utils.py
tests/fixtures/semgrep_outputs/: flask_findings.json
