[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sg-triage"
version = "0.1.0"
description = "LLM-assisted false-positive triage for Semgrep findings"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Gaurav", email = "your-email@example.com" }
]
keywords = ["semgrep", "sast", "security", "appsec", "llm", "triage"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]

dependencies = [
    "click>=8.1.0",
    "pydantic>=2.5.0",
    "anthropic>=0.39.0",
    "tree-sitter>=0.21.0",
    "tree-sitter-language-pack>=0.2.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
]

[project.scripts]
sg-triage = "sg_triage.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/semgrep-triage"
Repository = "https://github.com/yourusername/semgrep-triage"
Issues = "https://github.com/yourusername/semgrep-triage/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/sg_triage"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "N", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]